AngularFire2 bootstrap :fire:

--- a/src/app/acro-client.component.html
+++ b/src/app/acro-client.component.html
@@ -1,3 +1,9 @@
 <h1>
-  {{title}}
+  Hello, world!
 </h1>
+
+<ul *ngFor="let r of rooms | async">
+  <li class="text">
+    {{r.name}}
+  </li>
+</ul>
