--- a/src/app/assets/style/buttons.scss
+++ b/src/app/assets/style/buttons.scss
@@ -1,37 +1,38 @@
 @import 'colors';
 
-.btn-rounded {
-  border-radius: 40px;
-}
-
 .btn {
-  background: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.25);
+  box-shadow: 0 4px rgba(0,0,0,0.45);
   color: $co-white;
-  box-shadow: 0 6px rgba(0,0,0,0.75);
   border: none;
   font-family: inherit;
   font-size: inherit;
-  color: inherit;
-  background: none;
   cursor: pointer;
-  padding: 25px 80px;
   display: inline-block;
-  margin: 15px 30px;
+  padding: 12px 30px;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
-  cursor: pointer;
   outline: none;
   position: relative;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: box-shadow 0.2s;
+  -moz-transition: box-shadow  0.2s;
+  transition: box-shadow  0.2s;
+  
+  &.rounded {
+    border-radius: 40px;
+  }
+  
+  &.jumbo {
+    padding: 25px 80px;
+    margin: 15px 30px;
+  }
   
   &:hover {
-    box-shadow: 0 3px rgba(0,0,0,0.75);
+    box-shadow: 0 2px rgba(0,0,0,0.5);
   }
   
   &:active {
-    box-shadow: 0 3px rgba(0,0,0,0.75);
+    box-shadow: 0 0 rgba(0,0,0,0);
   }
 }
