--- a/src/app/room/room.template.html
+++ b/src/app/room/room.template.html
@@ -6,8 +6,8 @@
   </div>-->
   
   <!-- The Game -->
-  <!--<game [id]="roomId"></game>-->
+  <game [id]="roomId"></game>
   
   <!-- Chat area -->
-  <!--<chat [id]="roomId"></chat>-->
+  <chat [id]="roomId"></chat>
 </div>
